--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.android.support:cardview-v7:27.1.0'
+    compile 'org.litepal.android:core:1.6.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile 'com.facebook.stetho:stetho-okhttp3:1.4.2'
+    compile 'com.github.bumptech.glide:glide:3.8.0'
+
 }
 
 apply plugin: 'kotlin-android'
